resolvendo issues do sonarQube