@@ -8,7 +8,6 @@ import org.springframework.security.oauth2.jwt.Jwt;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class KeycloakRealmRoleConverter implements Converter<Jwt,
     Collection<GrantedAuthority>> {
@@ -25,6 +24,6 @@ public class KeycloakRealmRoleConverter implements Converter<Jwt,
         }
         return roles.stream().map(rolename ->
                 new SimpleGrantedAuthority("ROLE_" + rolename))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
